<resources>
    <string name="app_name">Wellness Plate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Welcoming Page-->
    <string name="wel">Welcome</string>
    <string name="wel1">kami dapat membantu anda untuk memperbaiki kebiasaan anda</string>
    <string name="wel2">kami memberikan rekomendasi makanan yang dibutuhkan oleh tubuh anda</string>
    <string name="wel3">kami akan membantu anda dalam hidup sehat, segera bergabung</string>

    <!--    Login and Register-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Lgoogle">Login dengan google</string>
    <string name="lupa_password"><u>Lupa Password?</u></string>
    <string name="bpa"><u>Belum Punya Akun?</u></string>
    <string name="caccount">Create an account</string>
    <string name="upassword">Ulangi password</string>
    <string name="buat_akun">buat akun</string>
    <string name="registration">Registrasi</string>
    <string name="spa"><u>Sudah Punya Akun?</u></string>
    <string name="email">Email</string>

    <!--    User Data-->
    <string name="title_userdata">Data User</string>
    <string name="title_budget">Berapa budget yang kamu butuhkan?</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="age">Usia</string>
    <string name="weight">Berat Badan</string>
    <string name="height">Tinggi Badan</string>
    <string name="budget">Contoh: 50000</string>
    <string name="allergies">Alergi:</string>
    <string name="disease">Riwayat Penyakit</string>
    <string name="stress">Stress</string>
    <string name="activities">Aktivitas</string>
    <string name="next">Next Step</string>
    <string name="submit">Submit</string>

    <!--    Home-->
    <string name="welcome">Welcome,</string>
    <string name="title_article">cara apa we kamumah kepoan orangyate ih</string>
    <string name="rating">Families and cultures clash when two LA millennials from different backgrounds fall in love and face the ultimate relationship test: meeting the parents</string>
    <string name="artikel">Artikel</string>
    <string name="makan_pagi">Makan Pagi</string>
    <string name="rp">Rp.</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="ipsum">Sorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur tempor quis eros tempus lacinia. Nam bibendum pellentesque quam a convallis. Sed ut vulputate nisi. Integer in felis sed leo vestibulum venenatis. Suspendisse quis arcu sem. Aenean feugiat ex eu vestibulum vestibulum. Morbi a eleifend magna. Nam metus lacus, porttitor eu mauris a, blandit ultrices nibh. Mauris sit amet magna non ligula vestibulum eleifend. Nulla varius volutpat turpis sed lacinia.</string>
    <string name="_20">\'20</string>
    <string name="back_button">Back button</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="preview_picture">preview picture</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="scan_gambar">Scan Gambar</string>
    <string name="back">Back</string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="like_button">Like</string>
    <string name="food_image">food image</string>
    <string name="favorite_makanan">Favorite Makanan</string>
    <string name="scan_makanan">Scan Makanan</string>
    <string name="resep">Resep</string>
    <string name="no_internet">No Internet</string>
    <string name="network_error">network error</string>
    <string name="invalid_password">invalid password</string>
    <string name="invalid_email">invalid Email</string>
    <string name="invalid_email_and_password">invalid Email and Password</string>
    <string name="detail_artikel">Detail Artikel</string>
    <string name="hi">Hi,</string>
    <string name="wanita">Wanita</string>
    <string name="pria">Pria</string>
    <string name="protein">Protein :</string>
    <string name="rekomendasi_makanan">Rekomendasi makanan</string>
    <string name="generate_rekomendasi">Generate rekomendasi</string>
    <string name="hasil_generate">Hasil generate</string>
    <string name="snack_sore">Snack Sore</string>
    <string name="snack_pagi">Snack Pagi</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="makan_siang">Makan Siang</string>
    <string name="kalori">Kalori :</string>
    <string name="karbohidrat">Karbohidrat :</string>
    <string name="fat">Fat :</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="tingkat_stres">Tingkat Stres</string>
    <string name="riwayat_penyakit">Riwayat Penyakit</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="alergi">Alergi</string>

    <string-array name="type_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="type_allergy">
        <item>-</item>
        <item>Kacang</item>
        <item>Udang</item>
        <item>Seafood</item>
    </string-array>

    <string-array name="type_disease">
        <item>-</item>
        <item>Diabetes</item>
        <item>Hipertensión</item>'
        <item>Cáncer</item>
        <item>Enfermedad cardiovascular</item>
        <item>Enfermedad pulmonar</item>
        <item>Enfermedad renal</item>
        <item>Enfermedad hepática</item>
        <item>Enfermedad neurológica</item>
        <item>Enfermedad hematológica</item>
        <item>Maag</item>
        <item>Otro</item>
    </string-array>

    <string-array name="type_stress">
        <item>Stres ringan</item>
        <item>Stres sedang</item>
        <item>Stres berat</item>
        <item>Stres sangat berat</item>
    </string-array>

    <string-array name="type_activity">
        <item>Kerja ringan</item>
        <item>Kerja ringan-sedang</item>
        <item>Kerja sedang</item>
        <item>Kerja berat</item>
        <item>Kerja berat sekali</item>
    </string-array>

    <string-array name="data_title">
        <item>You People</item>
        <item>Pamela, a love story</item>
        <item>Minions: The Rise of Gru</item>
        <item>Sniper: Ghost Shooter</item>
        <item>True Spirit</item>
        <item>The Hurricane Heist</item>
        <item>Bloodshot</item>
        <item>Glass Onion: A Knives Out Mystery</item>
        <item>Flushed Away</item>
        <item>Inheritance</item>
    </string-array>

    <string-array name="data_desc">
        <item>Families and cultures clash when two LA millennials from different backgrounds fall in love and face the ultimate relationship test: meeting the parents.</item>
        <item>In her own words, through personal video and diaries, Pamela Anderson shares the story of her rise to fame, rocky romances and infamous sex tape scandal.</item>
        <item>The untold story of one twelve-year-olds dream to become the worlds greatest supervillain</item>
        <item>Snipers ordered to protect a gas pipeline from terrorists suspect a security breach when they re targeted by a ghost shooter who knows their location.</item>
        <item>A tenacious Australian teen chases her dreams — and faces her fears — as she sets out to become the youngest person to sail solo around the world.</item>
        <item>Thieves attempt a massive heist against the U.S. Treasury as a Category 5 hurricane approaches one of its Mint facilities.</item>
        <item>A dead soldier is resurrected with new biotechnology and embarks on a mission of revenge in this sci-fi action drama based on the comic book series.</item>
        <item>World-famous detective Benoit Blanc heads to Greece to peel back the layers of a mystery surrounding a tech billionaire and his eclectic crew of friends.</item>
        <item>Hang on for a madcap adventure deep in the bowels of Ratropolis when high-society rat Roddy is flushed down the toilet by Sid, a common sewer rat.</item>
        <item>The patriarch of a wealthy and powerful family suddenly passes away, leaving his daughter with a shocking secret inheritance that threatens to unravel and destroy the family.</item>
    </string-array>
</resources>