<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk"
    tools:context=".ui.login.loginFragment">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="35sp"
            android:fontFamily="@font/poppinsr_regular"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:minHeight="48dp"
            android:autofillHints="username"
            android:hint="@string/email"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center"
            android:text="@string/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/lupa_password"
            android:textStyle="bold"
            android:textColor="@color/hijot"
            android:clickable="true"
            android:textSize="16sp"
            android:focusable="true" />

        <TextView
            android:id="@+id/regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpa"
            android:textColor="@color/hijot"
            android:minHeight="48dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />


    </LinearLayout>
    <View
        android:id="@+id/garis1"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:layout_above="@id/ldg"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/ldg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Lgoogle"/>
</RelativeLayout>