<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <TextView
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrasi"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/eNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints="Name" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:autofillHints="Email"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/upassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/creAkun"
        style="@style/bold"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/spa"
        android:textColor="@color/lblue_600"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>