<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ui.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splas" />

        <TextView
            android:id="@+id/wel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:text="@string/wel"
            android:textSize="28sp"
            android:textAppearance="@style/semibold"
            />

        <TextView
            android:id="@+id/wel1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:text="@string/wel1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="#8F9092"
            android:textAppearance="@style/regular" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:padding="14dp"
            android:text="@string/login"
            style="@style/semibold"
            android:textColor="#F7F8FA" />

        <Button
            android:id="@+id/bRegist"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:padding="14dp"
            android:text="@string/registration"
            style="@style/semibold"
            android:textColor="#F7F8FA" />

</LinearLayout>